# Lines

./: .gitignore  BuildInstructions.txt  CMakeLists.txt  FindMing.cmake  README.md  copyright.txt  linesversion.h  linesversion.h.in
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
DrawLib/: CMakeLists.txt  Camera.cpp  Camera.h  Circle.cpp  Circle.h  ExampleNewCommandFactory.cpp  Frame.cpp  Frame.h  ImageFlippingTool.cpp  ImageFlippingTool.h  ImageSprite.cpp  ImageSprite.h  IncludeGLee.h  IncludeGl.h  LinePrimitive.h  LinesApp.cpp  LinesApp.h  NewCommandStyle.h  Node.cpp  Node.h  PlaybackControler.cpp  PlaybackControler.h  Primitive.h  Scene.cpp  Scene.h  SharedPtrMacro.h  SoundGenerator.cpp  SoundGenerator.h  TabletStateWidget.cpp  TabletStateWidget.h  TabletStateWidget.ui  drwAutoGui.cpp  drwBitmapExporter.cpp  drwBitmapExporter.h  drwCamera.cpp  drwCamera.h  drwCommand.cpp  drwCommand.h  drwCommandDatabase.cpp  drwCommandDatabase.h  (+61 more)
Drw/: CMakeLists.txt  DisplaySettingsWidget.cpp  DisplaySettingsWidget.h  ExportDialog.cpp  ExportDialog.h  ExportDialog.ui  ExportToSWFDialog.cpp  ExportToSWFDialog.h  ExportToSWFDialog.ui  MainWindow.cpp  MainWindow.h  NetworkInterfaceWidget.cpp  NetworkInterfaceWidget.h  PlaybackControlerWidget.cpp  PlaybackControlerWidget.h  PrimitiveToolOptionWidget.cpp  PrimitiveToolOptionWidget.h  lines_icon.icns  main.cpp
DrwNetworkLog/: CMakeLists.txt  receiver.cpp  receiver.h
Examples/: CMakeLists.txt
Examples/GlutTemplateDrawLib/: CMakeLists.txt  main.cpp
Flip/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
GLee/: CMakeLists.txt
GraphicsEngine/: CMakeLists.txt  GraphicsEngine.h
GraphicsEngine/include/: GraphicsEngineManager.h  IGraphicsEngine.h  IncludeGLES.h  IncludeGLEW.h  IncludeGl.h  OpenGLESGraphicsEngine.h  OpenGLGraphicsEngine.h
GraphicsEngine/src/: GraphicsEngineManager.cpp  OpenGLESGraphicsEngine.cpp  OpenGLGraphicsEngine.cpp
GraphicsEngine/src/shader/: fragmentShader.glsl  shader.fs  shader.vs  vertexShader.glsl
Modelling/: DrwGeneralDiagrams.zargo  GeneralDiagram.zargo  graph_line_damping.gcx
TestTimelineClass/: CMakeLists.txt  drwScene.cpp  drwScene.h  drwTimelineWidget.cpp  drwTimelineWidget.h  main.cpp
cmake/: configuregithash.cmake  getgithash.cmake  windeployqt.cmake
doc/: compile_android.example  diagrams.md  runAndroid.md
linesCore/: CMakeLists.txt  Frame.cpp  IGraphicsEngine.h  IncludeGLee.h  IncludeGl.h  IncludeGlew.h  LinePrimitive.h  LinesCore.cpp  LinesCore.h  Node.cpp  Node.h  PlaybackControler.cpp  PlaybackControler.h  PolygonData.h  Primitive.h  Scene.cpp  Scene.h  SharedPtrMacro.h  drwCamera.cpp  drwCamera.h  drwCommandDatabase.cpp  drwCommandDispatcher.cpp  drwCommandDispatcher.h  drwDataArray.h  drwDrawableTexture.cpp  drwDrawableTexture.h  drwDrawingContext.cpp  drwDrawingContext.h  drwDrawingSurface.h  drwEditionState.h  drwGLRenderer.cpp  drwGLRenderer.h  drwGlslShader.cpp  drwGlslShader.h  drwLineTool.cpp  drwLineTool.h  drwRemoteCommandIO.h  drwTool.h  drwToolbox.cpp  drwToolbox.h  (+8 more)
linesDesktop/: CMakeLists.txt  DisplaySettingsWidget.cpp  DisplaySettingsWidget.h  ExportDialog.ui  Lines.rc  LinesPreferencesWidget.cpp  LinesPreferencesWidget.h  LinesPreferencesWidget.ui  MainWindow.cpp  MainWindow.h  PlaybackControlerWidget.cpp  PlaybackControlerWidget.h  PrimitiveToolOptionWidget.cpp  PrimitiveToolOptionWidget.h  main.cpp
linesDesktopLib/: CMakeLists.txt  ClickScrollWidget.cpp  ClickScrollWidget.h  DrawingWidgetMT.cpp  DrawingWidgetMT.h  LinesApp.cpp  LinesApp.h  SideToolbar.cpp  SideToolbar.h  SideToolbar.ui  TabletStateTestingArea.cpp  TabletStateTestingArea.h  TabletStateWidget.cpp  TabletStateWidget.h  TabletStateWidget.ui  drwAspectRatioWidget.cpp  drwAspectRatioWidget.h  drwAutoGui.h  drwBitmapExporter.cpp  drwBitmapExporter.h  drwCursor.cpp  drwCursor.h  drwDisplaySettings.cpp  drwDrawingWidget.cpp  drwDrawingWidget.h  drwFpsCounter.cpp  drwFpsCounter.h  drwGlobalLineParams.cpp  drwGlobalLineParams.h  drwGradientWidget.cpp  drwGradientWidget.h  drwLineToolViewportWidget.cpp  drwLineToolViewportWidget.h  drwNetworkConnectDialog.cpp  drwNetworkConnectDialog.h  drwNetworkConnectDialog.ui  drwsimplifiedtoolbar.cpp  drwsimplifiedtoolbar.h  drwsimplifiedtoolbar.ui  lineslibresources.qrc
linesDesktopLib/DebugTools/: drwDrawingEngine.cpp  drwDrawingEngine.h
linesNetwork/: CMakeLists.txt  drwNetworkClient.cpp  drwNetworkClient.h  drwNetworkManager.cpp  drwNetworkManager.h  drwNetworkServer.cpp  drwNetworkServer.h
linesTest/: CMakeLists.txt  main.cpp
linesVideoIO/: CMakeLists.txt  VideoEncoder.cpp  VideoEncoder.h
svl/: Box2d.cpp  Box2d.h  Box2i.cpp  Box2i.h  CMakeLists.txt  SVL.h  SVLConfig.h  SVLgl.h  Vec3.h
